--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -19,7 +19,11 @@
             <div id="user-information-name" class="user-information-name pull-right">
             </div>
         </div>
-        <h1><i class="icon-tasks icon-1x"></i> Processes</h1>
+        <div class="container">
+            <div class="row">
+                <h1><i class="icon-tasks icon-1x"></i> Processes</h1>
+            </div>
+        </div>
     </div>
     <div class="container">
         <div ng-view class="main-content row"></div>
