--- a/web/src/main/webapp/static/ng/views/deployment-detail.html
+++ b/web/src/main/webapp/static/ng/views/deployment-detail.html
@@ -1,51 +1,49 @@
-<div ng-controller="DeploymentDetailController" class="panel panel-default">
+<ul class="breadcrumb well">
+    <li><a href="#">Processes</a></li>
+    <li><a href="#/process/{{process.processDefinitionKey}}">{{process.processDefinitionLabel}}</a></li>
+    <li><a href="#/deployment/{{process.processDefinitionKey}}">Deployments</a></li>
+    <li class="active">#{{deployment.deploymentVersion}}</li>
+</ul>
+<div class="panel panel-default">
     <div class="panel-heading">
-        <span class="lead">Deployment Details</span>
+        <div ng-if="process.deploymentId == deployment.deploymentId" class="pull-right" style="line-height: 32px"><strong>Published on {{process.deploymentDate|date:'medium'}}</strong></div>
+        <span ng-if="process.deploymentId == deployment.deploymentId"><i class="icon-rocket icon-2x"></i>&nbsp;&nbsp;&nbsp;</span>
+        <span class="lead">Deployment #{{deployment.deploymentVersion}} Details</span>
     </div>
-    <form id="deployment-detail-form" ng-submit="updateDeployment()">
-        <fieldset>
-            <div class="form-group col-lg-4 col-md-6 col-sm-8">
-                <label>Deployment Label</label>
-                <div class="controls">
-                    <div class="viewable process-short-name-readonly muted"></div>
-                    <input class="form-control span6" type="text"
-                           name="processDefinitionLabel" size="30" maxlength="80"
-                           placeholder="Provide an optional label for this deployment"
-                           ng-model="deployment.deploymentLabel">
-                    <span class="help-inline hide">Required</span>
+    <div class="panel-body">
+
+        <form id="deployment-detail-form" ng-submit="updateDeployment()">
+            <fieldset>
+                <div class="form-group">
+                    <label>Deployment Label</label>
+                    <div class="controls">
+                        <div class="viewable process-short-name-readonly muted"></div>
+                        <input class="form-control span6" type="text"
+                               name="processDefinitionLabel" size="30" maxlength="80"
+                               placeholder="Provide an optional label for this deployment"
+                               ng-model="deployment.deploymentLabel">
+                        <span class="help-inline hide">Required</span>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group col-lg-3 col-md-6 col-sm-4">
-                <label>Created</label>
-                <div class="controls">
-                    <div class="viewable muted"></div>
-                    <input class="form-control" type="text"
-                           name="created" maxlength="18" size="18"
-                           placeholder="Created"
-                           value="{{deployment.created|date:'medium'}}" disabled> <span
-                        class="help-inline hide">Required</span>
+                <div class="form-group">
+                    <label>Deployment Label</label>
+                    <div class="controls">
+                        <div class="viewable process-short-name-readonly muted"></div>
+                        <input class="form-control span6" type="text"
+                               name="processDefinitionLabel" size="30" maxlength="80"
+                               placeholder="Provide an optional label for this deployment"
+                               ng-model="deployment.deploymentLabel">
+                        <span class="help-inline hide">Required</span>
+                    </div>
                 </div>
+
+            </fieldset>
+            <div class="pull-right">
+                <button class="btn btn-default" type="submit" role="button">Update</button>
+                <button class="btn btn-danger" type="button" role="button">Publish</button>
             </div>
-            <div class="form-group col-lg-2 col-md-6 col-sm-4">
-                <label>Version</label>
-                <div class="controls">
-                    <div class="viewable muted"></div>
-                    <input class="form-control text-right" type="text"
-                           name="deploymentVersion" maxlength="5" size="5"
-                           placeholder="Version"
-                           value="{{deployment.deploymentVersion}}" disabled> <span
-                        class="help-inline hide">Required</span>
-                </div>
-            </div>
-            <div class="form-group col-lg-12">
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" ng-model="deployment.isAnonymousSubmissionAllowed"> Allow anonymous form submission
-                    </label>
-                </div>
-            </div>
-        </fieldset>
-        <button class="btn btn-primary pull-right" type="submit" role="button">Update</button>
-        <div class="clearfix"></div>
-    </form>
+
+            <div class="clearfix"></div>
+        </form>
+    </div>
 </div>
