Improvements to deployment screens, a few bug fixes

--- a/web/src/main/webapp/static/js/templates/form/field-date.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-date.hbs
@@ -2,7 +2,7 @@
 <label>{{label}}</label>
 {{/if}}
 <input class="form-control"
-       type="{{type}}"
+       type="text"
        name="{{name}}"
        maxlength="{{maxValueLength}}"
        size="{{displayValueLength}}"
@@ -12,6 +12,7 @@
 {{#if customValidity}}oninvalid="setCustomValidity('{{customValidity}}')"{{/if}}
 {{#if pattern}}pattern="{{pattern}}"{{/if}}
 {{#if value}}value="{{date value}}"{{/if}}
+{{#unless readonly}}readonly{{/unless}}
 {{#unless editable}}disabled{{/unless}}/>
 {{#if messages}}
 {{#each messages}}
