--- a/web/src/main/webapp/static/ng/views/deployment-list.html
+++ b/web/src/main/webapp/static/ng/views/deployment-list.html
@@ -3,3 +3,19 @@
     <li><a href="#/process/{{process.processDefinitionKey}}">{{process.processDefinitionLabel}}</a></li>
     <li class="active">Deployments</li>
 </ul>
+<table class="table">
+    <thead>
+    <tr>
+        <th>#</th>
+        <th>Label</th>
+        <th>Created</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="deployment in deployments">
+        <td>{{deployment.deploymentVersion}} <span ng-if="deployment.published" title="Deployed on {{deployment.deployed | date:'medium' }}"><i class="icon-rocket"></i></span></td>
+        <td><a href="#/deployment/{{process.processDefinitionKey}}/{{deployment.deploymentId}}" title="{{deployment.deploymentLabel}}">{{deployment.deploymentLabel}}</a></td>
+        <td>{{deployment.created | date:'medium' }}</td>
+    </tr>
+    </tbody>
+</table>
