--- a/web/src/main/webapp/static/ng/views/process-detail.html
+++ b/web/src/main/webapp/static/ng/views/process-detail.html
@@ -3,7 +3,10 @@
     <li class="active">{{process.processDefinitionLabel}}</li>
 </ul>
 <div ng-controller="ProcessEditController" class="panel panel-default">
-    <div class="panel-heading"><span class="lead">Process Details</span></div>
+    <div class="panel-heading">
+        <div class="pull-right" style="line-height:32px"><a href="#/deployment/{{process.processDefinitionKey}}">View deployments</a></div>
+        <span class="lead">Process Details</span>
+    </div>
     <div class="panel-body">
         <form id="process-detail-form" ng-submit="updateProcess()">
             <fieldset>
