--- a/web/src/main/webapp/static/ng/views/deployment-detail.html
+++ b/web/src/main/webapp/static/ng/views/deployment-detail.html
@@ -4,84 +4,94 @@
     <li><a href="#/deployment/{{process.processDefinitionKey}}">Deployments</a></li>
     <li class="active">#{{deployment.deploymentVersion}}</li>
 </ul>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <div ng-if="process.deploymentId == deployment.deploymentId" class="pull-right" style="line-height: 32px"><strong>Published on {{process.deploymentDate|date:'medium'}}</strong></div>
-        <span ng-if="process.deploymentId == deployment.deploymentId"><i class="icon-rocket icon-2x"></i>&nbsp;&nbsp;&nbsp;</span>
-        <span class="lead">Deployment #{{deployment.deploymentVersion}} Details</span>
+<div ng-controller="DeploymentDetailController">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <div ng-if="process.deploymentId == deployment.deploymentId" class="pull-right" style="line-height: 32px"><strong>Published on {{process.deploymentDate|date:'medium'}}</strong></div>
+            <span ng-if="process.deploymentId == deployment.deploymentId"><i class="icon-rocket icon-2x"></i>&nbsp;&nbsp;&nbsp;</span>
+            <span class="lead">Deployment #{{deployment.deploymentVersion}} Details</span>
+        </div>
+        <div class="panel-body">
+            <form id="deployment-detail-form" ng-submit="updateDeployment()">
+                <fieldset>
+                    <div class="form-group">
+                        <label>Deployment Label</label>
+                        <div class="controls">
+                            <input class="form-control" type="text"
+                                   name="processDefinitionLabel" size="30" maxlength="80"
+                                   placeholder="Provide an optional label for this deployment"
+                                   ng-model="deployment.deploymentLabel"
+                                   ng-disabled="!deployment.editable">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label>BPMN Definition</label>
+                        <div class="controls">
+                            <input class="form-control" type="file"
+                                   name="processDefinitionFile"
+                                   placeholder="Provide a file"
+                                   ng-if="deployment.editable">
+                            <a href="" ng-if="!deployment.editable"><i class="icon-cloud-download"></i> <span>{{deployment.engineProcessDefinitionLocation}}</span></a>
+                        </div>
+                    </div>
+                    <div>
+                    </div>
+                </fieldset>
+                <div class="pull-right" ng-if="deployment.editable">
+                    <button class="btn btn-default" type="submit" role="button">Update</button>
+                    <button class="btn btn-danger" type="button" role="button">Publish</button>
+                </div>
+
+                <div class="clearfix"></div>
+            </form>
+        </div>
     </div>
-    <div class="panel-body">
-        <form id="deployment-detail-form" ng-submit="updateDeployment()">
-            <fieldset>
-                <div class="form-group">
-                    <label>Deployment Label</label>
-                    <div class="controls">
-                        <input class="form-control" type="text"
-                               name="processDefinitionLabel" size="30" maxlength="80"
-                               placeholder="Provide an optional label for this deployment"
-                               ng-model="deployment.deploymentLabel"
-                               ng-disabled="!deployment.editable">
-                    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <div class="pull-right">
+                <div ng-if="deployment.editable" class="btn-group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                        <i class="icon-plus icon-1x"></i> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Add interaction</a></li>
+                        <li><a href="#">Add screen</a></li>
+                    </ul>
                 </div>
-                <div class="form-group">
-                    <label>BPMN Definition</label>
-                    <div class="controls">
-                        <input class="form-control" type="file"
-                               name="processDefinitionFile"
-                               placeholder="Provide a file"
-                               ng-if="deployment.editable">
-                        <a href="" ng-if="!deployment.editable"><i class="icon-cloud-download"></i> <span>{{deployment.engineProcessDefinitionLocation}}</span></a>
-                    </div>
-                </div>
-                <div>
-                    <!--div class="panel">
-                        <div class="panel-heading">
-                            <h4>User interactions</h4>
-                        </div>
-                        <div class="panel-body">
-                            <ul>
-                                <li ng-repeat="interaction in deployment.interactions" class="">
-                                    <h3><i class="icon-code-fork icon-1x"></i> <span class="label label-default">{{interaction.label}}</span></h3>
-
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Label</th>
-                                <th>Screens</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="interaction in deployment.interactions">
-                                <td>{{interaction.label}}</td>
-                                <td>{{interaction.screens.length}}</td>
-                            </tr>
-                        </tbody>
-                    </table-->
-                </div>
-            </fieldset>
-            <div class="pull-right" ng-if="deployment.editable">
-                <button class="btn btn-default" type="submit" role="button">Update</button>
-                <button class="btn btn-danger" type="button" role="button">Publish</button>
             </div>
+            <span class="lead">User interactions</span>
+        </div>
+        <div class="panel-body">
+            <div class="list-group">
+                <div ng-repeat="interaction in deployment.interactions" class="list-group-item">
+                    <button ng-if="deployment.editable" type="button" class="close" aria-hidden="true">&times;</button>
+                    <h4>{{interaction.label}} <i class="icon-long-arrow-right"></i> <span class="label label-success" ng-repeat="taskDefinitionKey in interaction.taskDefinitionKeys">{{taskDefinitionKey}}</span></h4>
 
-            <div class="clearfix"></div>
-        </form>
-    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <span class="lead">User interactions</span>
-    </div>
-    <div class="panel-body">
-        <div class="list-group">
-            <div ng-repeat="interaction in deployment.interactions" class="list-group-item">
-                <h4 class="list-group-item-heading">{{interaction.label}}</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+
+                    <!--div class="list-group-item-heading">
+                        <button type="button" class="close" aria-hidden="true">&times;</button>
+                        <h4>{{interaction.label}}</h4>
+
+                    </div>
+                    <div class="list-group-item-text">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Title</th>
+                                    <th>Location</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="screen in interaction.screens">
+                                    <td>{{screen.title}}</td>
+                                    <td>{{screen.location}}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <span class="label label-success" ng-repeat="taskDefinitionKey in interaction.taskDefinitionKeys">{{taskDefinitionKey}}</span>
+                        <div class="clearfix"></div>
+                    </div-->
+                </div>
             </div>
         </div>
     </div>
