Switched from using engine process definition key to use definition id to have better control over versioning of process deployments

--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -15,16 +15,16 @@
 
 </head>
 <body role="application">
-    <div class="navbar navbar-fixed-top main-navbar">
+    <nav class="navbar navbar-default navbar-fixed-top main-navbar" role="navigation">
         <div class="user-information">
             <div id="user-information-name" class="user-information-name pull-right">
             </div>
         </div>
-    </div>
+    </nav>
     <div class="container">
         <div class="main-content row"></div>
     </div>
-    <div class="main-footer navbar navbar-fixed-bottom">
+    <div class="navbar navbar-default navbar-fixed-bottom main-footer">
         <div class="navbar-inner">
             <ul>
                 <li class="nav"></li>
