--- a/web/src/main/webapp/static/ng/views/deployment-detail.html
+++ b/web/src/main/webapp/static/ng/views/deployment-detail.html
@@ -1,4 +1,4 @@
-<ul class="breadcrumb well">
+<ul class="breadcrumb">
     <li><a href="#">Processes</a></li>
     <li><a href="#/process/{{process.processDefinitionKey}}">{{process.processDefinitionLabel}}</a></li>
     <li><a href="#/deployment/{{process.processDefinitionKey}}">Deployments</a></li>
