--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -22,7 +22,7 @@
         padding-bottom: 100px;
     }
     .responsive-pull-right {
-        float: right!important;
+        float: right !important;
     }
     .selected-buttons {
         float: right!important;
@@ -274,6 +274,10 @@ select.form-control {
 
 .nav.navbar-thin > li > a:hover {
     color: white;
+}
+
+.navbar-ex1-collapse .row .navbar-form {
+    margin: 0px;
 }
 
 .toolbar-items .nav.btn-group .dropdown span {
