--- a/web/src/main/webapp/static/js/templates/form/notification.hbs
+++ b/web/src/main/webapp/static/js/templates/form/notification.hbs
@@ -1,4 +1,4 @@
-<div class="alert alert-block alert-error fade in">
+<div class="alert alert-block alert-danger fade in">
     {{#unless permanent}}
     <button type="button" class="close" data-dismiss="alert">×</button>
     {{/unless}}
