--- a/web/src/main/webapp/static/ng/views/process-detail.html
+++ b/web/src/main/webapp/static/ng/views/process-detail.html
@@ -1,4 +1,4 @@
-<ul class="breadcrumb well">
+<ul class="breadcrumb">
     <li><a href="#">Processes</a></li>
     <li class="active">{{process.processDefinitionLabel}}</li>
 </ul>
